fix gif spacing

--- a/wp-content/themes/acme-fx/style.css
+++ b/wp-content/themes/acme-fx/style.css
@@ -3351,6 +3351,18 @@ body .fbx-inner {
 .page-child.parent-pageid-69 .content p + video {
 	margin-top: 60px;
 }
+.page-child.parent-pageid-69 .content h1 + video,
+.page-child.parent-pageid-69 .content h1 + p video {
+
+}
+.page-child.parent-pageid-69 .content p {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+	margin-bottom: 50px;
+}
 
 /* # Media Queries
 ---------------------------------------------------------------------------------------------------- */
